[package]
name = "cxx-juce"
description = "Rust bindings for JUCE using cxx."
version = "0.8.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JamesHallowell/cxx-juce"
documentation = "https://docs.rs/cxx-juce"

[features]
asio = []

[dependencies]
cxx = "1.0.188"
slotmap = "1.1.1"

[build-dependencies]
cmake = "0.1.50"
cxx-build = "1.0.188"
