[package]
name = "cxx-juce"
description = "Rust bindings for JUCE using cxx."
version = "0.8.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JamesHallowell/cxx-juce"
documentation = "https://docs.rs/cxx-juce"

[features]
default = []
juce-8 = []
asio = []
juce_audio_processors = []
vst3 = ["juce_audio_processors"]

[dependencies]
cxx = "1.0.188"

[build-dependencies]
cmake = "0.1.57"
cxx-build = "1.0.188"

[[example]]
name = "audio_plugins"
required-features = ["juce_audio_processors"]
